# bevy-systems

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  flake.nix  index.html  nova-protocol-6685a1f340bb5705.js  nova-protocol-68b9e0f2397ca930.js  nova-protocol-70d8005cc98d03ee.js  nova-protocol-89b1d7f96db5cf71.js  nova-protocol-ab8a2e595d0de64.js  nova-protocol-b87c297cd6d3ca2f.js
.github/workflow/: release.yaml
.github/workflows/: deploy-page.yaml  release.yaml
assets/: terrain.feature.ron  terrain.tile.ron  tiles.terrain.ron
assets/blender/: hull-01.blend  hull-01.blend1  turret-yaw-01.blend
assets/gltf/: hull-01.glb
assets/shaders/: chunk.wgsl  chunk_gradient.wgsl  directional_magnitude.wgsl  hex_visualize.wgsl  thruster_exhaust.wgsl
crates/bevy_common_systems/: Cargo.toml
crates/bevy_common_systems/bevy_common_systems_macros/: Cargo.toml
crates/bevy_common_systems/bevy_common_systems_macros/src/: lib.rs
crates/bevy_common_systems/examples/: 01_sphere.rs  02_planet.rs
crates/bevy_common_systems/src/: lib.rs
crates/bevy_common_systems/src/camera/: chase.rs  mod.rs  post.rs  skybox.rs  wasd.rs
crates/bevy_common_systems/src/debug/: inspector.rs  mod.rs  wireframe.rs
crates/bevy_common_systems/src/health/: mod.rs
crates/bevy_common_systems/src/helpers/: despawn.rs  mod.rs  temp.rs  wasd.rs
crates/bevy_common_systems/src/mesh/: builder.rs  explode.rs  mod.rs  noise.rs  slicer.rs  sphere.rs  util.rs
crates/bevy_common_systems/src/meth/: lerp.rs  mod.rs  sphere.rs
crates/bevy_common_systems/src/modding/: events.rs  mod.rs
crates/bevy_common_systems/src/modding/events/: action.rs  filter.rs  game_event.rs  handler.rs  kind.rs  mod.rs  registry.rs
crates/bevy_common_systems/src/physics/: bullet_projectile.rs  collision_damage.rs  collision_impact.rs  mod.rs
crates/bevy_common_systems/src/projectiles/: bullet_projectile.rs  mod.rs  spawner.rs
crates/bevy_common_systems/src/transform/: directional_sphere_orbit.rs  mod.rs  point_rotation.rs  random_sphere_orbit.rs  smooth_look_rotation.rs  sphere_orbit.rs  transform_chain_world.rs
crates/bevy_common_systems/src/ui/: fps_status.rs  mod.rs  status.rs
crates/nova_assets/: Cargo.toml
crates/nova_assets/src/: lib.rs  scenario.rs  sections.rs
crates/nova_core/: Cargo.toml
crates/nova_core/src/: core.rs  editor.rs  lib.rs  plugin.rs  setup.rs  simulation.rs
crates/nova_debug/: Cargo.toml
crates/nova_debug/src/: inspector.rs  lib.rs  physics.rs  sections.rs  spawner.rs  turret.rs  wireframe.rs
crates/nova_events/: Cargo.toml
crates/nova_events/src/: lib.rs
crates/nova_gameplay/: Cargo.toml
crates/nova_gameplay/src/: asteroid.rs  camera_controller.rs  components.rs  damage.rs  events.rs  lib.rs  plugin.rs  projectile_damage.rs  spaceship.rs
crates/nova_gameplay/src/attachments/: mod.rs
crates/nova_gameplay/src/damage/: collision.rs  mod.rs  projectile.rs
crates/nova_gameplay/src/destruction/: despawn.rs  explode.rs  mod.rs
crates/nova_gameplay/src/hud/: health.rs  mod.rs  objectives.rs  velocity.rs
crates/nova_gameplay/src/input/: ai.rs  mod.rs  player.rs
crates/nova_gameplay/src/modding/: actions.rs  events.rs  filters.rs  mod.rs  scenario.rs  variables.rs  world.rs
crates/nova_gameplay/src/projectiles/: bullet_projectile.rs  mod.rs  spawner.rs
crates/nova_gameplay/src/scenario/: loader.rs  mod.rs  variables.rs
crates/nova_gameplay/src/scenario/objects/: asteroid.rs  spaceship.rs
crates/nova_gameplay/src/sections/: base_section.rs  controller_section.rs  hull_section.rs  mod.rs  thruster_section.rs  turret_section.rs
crates/nova_gameplay/src/spaceship/: camera_controller.rs  mod.rs
crates/nova_gameplay/src/spaceship/hud/: health.rs  mod.rs  velocity.rs
crates/nova_gameplay/src/spaceship/input/: mod.rs  player.rs
crates/nova_gameplay/src/spaceship/sections/: base_section.rs  controller_section.rs  hull_section.rs  mod.rs  thruster_section.rs  turret_section.rs
crates/nova_info/: Cargo.toml  build.rs
crates/nova_info/src/: lib.rs
crates/nova_scenario/: Cargo.toml
crates/nova_scenario/src/: actions.rs  events.rs  filters.rs  lib.rs  loader.rs  variables.rs  world.rs
crates/nova_scenario/src/objects/: asteroid.rs  mod.rs  spaceship.rs
examples/: 01_demo.rs  01_demo_thruster.rs  01_scene.rs  02_hull.rs  03_thruster.rs  03a_thruster.rs  03b_shader.rs  04_controller.rs  05_turret.rs  06_projectile.rs  06b_projectile.rs  07_health.rs  07a_health.rs  07b_slicer.rs  08_hud.rs  09_status_item.rs  10_jitter.rs  10_modding.rs  11_scenario.rs  12_asteroids.rs  12_editor.rs  helpers.rs  spaceship_camera.rs  spaceship_editor.rs  spaceship_rotation.rs  spaceship_section.rs  spaceship_torque.rs  spaceship_turret.rs  turret_rotation.rs  turret_target.rs
examples/01-hello/: README.md  main.rs
examples/02-camera/: README.md  rts_camera.rs  wasd_camera.rs
examples/03-hexmap/: README.md  common.rs  coordinates.rs  mesh.rs  overlay.rs  perlin.rs  planet.rs  simple.rs
examples/helpers/: mod.rs  plugins.rs  render.rs  setup_systems.rs  systems.rs  wasd_camera_controller.rs
src/: controller.rs  lib.rs  main.rs  setup.rs  states.rs
src/assets/: features.rs  mod.rs  plugin.rs  tiles.rs
src/camera/: chase.rs  mod.rs  orbit.rs  rts_camera.rs  wasd.rs  wasd_camera.rs
src/controller/: mod.rs
src/debug/: mod.rs  overlay.rs  plugin.rs
src/gameplay/: mod.rs
src/gameplay/sections/: controller_section.rs  crew_section.rs  engine_section.rs  mod.rs  (+4 more)
src/glue/: hex_map.rs  mod.rs
src/helpers/: mod.rs
src/hexmap/: map.rs  mod.rs  perlin.rs
src/mesh/: hexmap.rs
src/meth/: lerp.rs  mod.rs
src/noise/: map.rs  mod.rs
src/physics/: mod.rs  pd_controller.rs
src/render/: hexmap.rs  mod.rs  plugin.rs
src/terrain/: assets.rs  components.rs  generation.rs  mod.rs  planet.rs  plugin.rs  render.rs
src/tilemap/: hexmap.rs  mod.rs
src/transform/: mod.rs  point_rotation.rs  random_sphere_orbit.rs  smooth_look_rotation.rs  smooth_target_rotation.rs  smooth_zoom_orbit.rs  sphere_orbit.rs
src/unit/: components.rs  mod.rs  plugin.rs  render.rs
(+8 files in other folders)
