[package]
name = "bevy-systems"
version = "0.1.0"
authors = ["jercan_alex27@yahoo.com"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/alexjercan/bevy-systems"
description = "Random systems that I think are interesting."
categories = ["games"]
exclude = ["dist", "build", "assets", "credits"]

[lib]
path = "src/lib.rs"

[dependencies]
avian3d = "0.3.1"
bevy = {version = "0.16.1", features = [
  "serialize",
  "bevy_asset",
  "bevy_state",
  "bevy_pbr",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "default_font",
  "tonemapping_luts",
  "animation",
  "bevy_animation",
  "bevy_gltf",
  "png",
  "bevy_window",
  "bevy_winit",
  "webgpu", # TODO: Disable this when not on WASM
  "x11",
  "bevy_gizmos",
], default-features = false}
bevy-inspector-egui = "0.33.1"
bevy_asset_loader = "0.23.0"
bevy_enhanced_input = "0.18.2"
clap = { version = "4.5.48", features = ["derive"] }
rand = "0.9.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[workspace.lints.rust]
# dead_code = "allow"
# unused_variables = "allow"
# unused_imports = "allow"

[workspace.lints.clippy]
type_complexity = "allow"

[build-dependencies]
embed-resource = "1"

[features]
debug = []
dev = [
    "bevy/dynamic_linking", "debug"
]
