[package]
name = "nova-protocol"
version = "0.1.0"
authors = ["jercan_alex27@yahoo.com"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/alexjercan/nova-protocol"
description = "A 3D space shooter game made with Bevy"
categories = ["games"]
exclude = ["dist", "build", "assets", "credits"]

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
nova_core = { path = "crates/nova_core" }

# TODO: Fix the WASM build
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# js-sys = { version = "0.3.81" }
# serde-wasm-bindgen = { version = "0.6.5" }
# wasm-bindgen = { version = "0.2.104" }
# web-sys = "0.3.81"
# getrandom = { version = "0.3.4", features = ["wasm_js"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
embed-resource = "1"

[features]
debug = ["nova_core/debug"]
dev = ["debug"]

[workspace.lints.rust]
# dead_code = "allow"
# unused_variables = "allow"
# unused_imports = "allow"

[workspace.lints.clippy]
type_complexity = "allow"

[workspace]
members = [
  "crates/bevy_common_systems",
  "crates/nova_assets",
  "crates/nova_core",
  "crates/nova_debug",
  "crates/nova_gameplay",
]
resolver = "2"

# [workspace.dependencies]
# avian3d = { version = "0.4" }
# bevy = { version = "0.17.2", features = ["experimental_bevy_ui_widgets"] }
# rand = { version = "0.9.2" }
# bevy_anti_alias = { version = "0.17.0-rc.2" }
# bevy_hanabi = { version = "0.17.0", default-features = false, features = ["2d", "3d"] }
# serde_json = { version = "1.0.145" }
# serde = { version = "1.0.228" }
