[package]
name = "bevy_common_systems"
version = "0.0.1"
edition = "2021"
description = "Common systems and utilities for Bevy-based projects"

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true }
bevy_enhanced_input = { workspace = true }
rand = { workspace = true }
inventory = { workspace = true }
bevy_common_systems_macros = { path = "./bevy_common_systems_macros" }

[lints]
workspace = true

[features]
debug = []
