[package]
name = "bevy_common_systems"
version = "0.0.1"
edition = "2021"
description = "Common systems and utilities for Bevy-based projects"

[dependencies]
avian3d = { version = "0.4" }
bevy = { version = "0.17.2" }
bevy_enhanced_input = { version = "0.19.0" }
rand = { version = "0.9.2" }
serde_json = { version = "1.0.145" }
serde = { version = "1.0.228" }
bevy_common_systems_macros = { path = "./bevy_common_systems_macros" }

[lints]
workspace = true

[features]
debug = []
