[package]
name = "nova_core"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true, features = ["experimental_bevy_ui_widgets"] }
bevy_enhanced_input = { workspace = true }
bevy_hanabi = { workspace = true }
bevy_common_systems = { path = "../bevy_common_systems" }
nova_assets = { path = "../nova_assets" }
nova_debug = { path = "../nova_debug", optional = true }
nova_gameplay = { path = "../nova_gameplay" }

[lints]
workspace = true

[features]
debug = ["nova_debug/debug"]
