[package]
name = "nova_core"
version = "0.1.0"
edition = "2021"
description = "Core systems and modules for the Nova Protocol game"

[dependencies]
avian3d = { version = "0.4" }
bevy = { version = "0.17.2", features = ["experimental_bevy_ui_widgets"] }
bevy_enhanced_input = { version = "0.19.0" }
bevy_hanabi = { version = "0.17.0", default-features = false, features = ["2d", "3d"] }
rand = { version = "0.9.2" }
itertools = { version = "0.14.0" }
nova_assets = { path = "../nova_assets" }
nova_debug = { path = "../nova_debug", optional = true }
nova_gameplay = { path = "../nova_gameplay" }

[lints]
workspace = true

[features]
debug = ["nova_debug/debug", "bevy/track_location"]
