[package]
name = "nova_debug"
version = "0.1.0"
edition = "2021"
description = "Debugging utilities for the Nova Protocol game"

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_mod_debugdump = { workspace = true }
nova_gameplay = { path = "../nova_gameplay" }

[lints]
workspace = true

[features]
debug = []
