[package]
name = "nova_debug"
version = "0.1.0"
edition = "2021"
description = "Debugging utilities for the Nova Protocol game"

[dependencies]
avian3d = { version = "0.4", features = ["diagnostic_ui"] }
bevy = { version = "0.17.2" }
itertools = { version = "0.14.0" }
bevy-inspector-egui = { version = "0.34" }
bevy_mod_debugdump = { version = "0.14" }
nova_gameplay = { path = "../nova_gameplay" }

[lints]
workspace = true

[features]
debug = []
