[package]
name = "nova_gameplay"
version = "0.1.0"
edition = "2021"
description = "Gameplay systems and logic for the Nova Protocol game"

[dependencies]
avian3d = { workspace = true }
bevy = { workspace = true }
rand = { workspace = true }
bevy_hanabi = { workspace = true }
bevy_common_systems = { path = "../bevy_common_systems" }

[lints]
workspace = true
