[package]
name = "nova_gameplay"
version = "0.1.0"
edition = "2021"
description = "Gameplay systems and logic for the Nova Protocol game"

[dependencies]
avian3d = { version = "0.4" }
bevy = { version = "0.17.2", features = ["experimental_bevy_ui_widgets"] }
rand = { version = "0.9.2" }
bevy_hanabi = { version = "0.17.0", default-features = false, features = ["2d", "3d"] }
bevy_common_systems = { path = "../bevy_common_systems" }

[lints]
workspace = true
