[package]
name = "nova_gameplay"
version = { workspace = true }
edition = { workspace = true }
description = "Gameplay systems and logic for the Nova Protocol game"

[dependencies]
avian3d = { version = "0.4" }
bevy = { version = "0.17.2", features = ["experimental_bevy_ui_widgets"] }
bevy_enhanced_input = { version = "0.19.0" }
rand = { version = "0.9.2" }
bevy_hanabi = { version = "0.17.0", default-features = false, features = ["2d", "3d"] }
serde = { version = "1.0.228" }
bevy_common_systems = { path = "../bevy_common_systems" }

[lints]
workspace = true

[features]
debug = ["bevy/track_location", "bevy_common_systems/debug"]
