[package]
name = "nova_scenario"
version = { workspace = true }
edition = { workspace = true }
description = "Scenario loader and logic for the Nova Protocol game"

[dependencies]
avian3d = { version = "0.4" }
bevy = { version = "0.17.2", features = ["experimental_bevy_ui_widgets"] }
bevy_enhanced_input = { version = "0.19.0" }
rand = { version = "0.9.2" }
noise = { version = "0.9" }
bevy_common_systems = { path = "../bevy_common_systems" }
bevy_rand = { version = "0.12.1", default-features = false, features = ["rand_chacha", "wyrand"] }
nova_events = { path = "../nova_events" }
nova_gameplay = { path = "../nova_gameplay" }

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
bevy_rand = { version = "0.12.1", features = ["wasm_js"] }

[lints]
workspace = true

[features]
debug = ["bevy/track_location", "bevy_common_systems/debug"]
